Summary of current state of progress with genome properties system  - Example GenomeProperty_2029 on hmp098 correctly shows all steps filled  - Adding RunHmmTest2.java shows a bug with 4.0/5.0 steps filled for GenomeProperty_2029 on hmp098  - requiredby.drl rule does not fire to calculate values for Genome Properties
git-svn-id: http://svn.jcvi.org/ANNOTATION/RulesBasedAnnotation/trunk@32736 061605af-e407-0410-a945-9c8a22772c06